snapshots/care/data4life/hc-util-sdk-kmp/error/1.13.0-SNAPSHOT/error-1.13.0-20220817.130540-1.jar.md5
e4e029001a4fb998b6ec3992d9f210e0